# i3-alternative-layouts-rs

./: Cargo.toml
.cargo/: config.toml
.github/workflows/: release.yml
src/: main.rs
