[package]
name = "i3-alternating-layouts-rs"
version = "0.1.0"
edition = "2021"
authors = ["Vitaliy Pavlikov <warhotpoint@gmail.com>"]
description = "Alternating split directions for the i3-wm"
homepage = "https://github.com/crossdot/i3-alternative-layouts-rs"
repository = "https://github.com/crossdot/i3-alternative-layouts-rs"
license = "Unlicense OR MIT"

[profile.release]
strip = true
opt-level = "z"  # Optimize for size
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
i3ipc = "~0.10"

